# Axiomeer

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  marketplace.db  pyproject.toml  pytest.ini  test_marketplace.db
.claude/: settings.json  settings.local.json
Test Images/v2-results/: test-results.md
alembic/: env.py
alembic/versions/: ca75da54a145_add_authentication_tables.py
apps/api/: auth_routes.py  main.py  providers.py  providers.py.backup
apps/api/routers/: v1 2.py
manifests/: numbers_math.json  open_library.json  rest_countries.json  wikidata_search.json  wikipedia_dumps.json  wikipedia_search.json
manifests/categories/ai_models/: hf_gpt2.json  hf_image_classification.json  hf_ner.json  hf_question_answering.json  hf_sentiment.json  hf_summarization.json  hf_translate_en_es.json  hf_translate_en_fr.json  ollama_codellama_13b.json  ollama_deepseek_coder.json  ollama_llama3_8b.json  ollama_mistral_7b.json
manifests/categories/entertainment/: breaking_bad_quotes.json  cat_facts.json  dog_images.json  pokemon_data.json  rick_morty_characters.json
manifests/categories/financial/: blockchain_info.json  coinbase_prices.json  coingecko_crypto.json  exchange_rates.json
manifests/categories/food/: cocktaildb_recipes.json  fruityvice_nutrition.json  themealdb_recipes.json
manifests/categories/fun/: chuck_norris_jokes.json  coinflip.json  corporate_bs.json  dice_roll.json  kanye_quotes.json  numbers_trivia.json  useless_facts.json  yesno_answer.json
manifests/categories/geographic/: geonames.json  ip_geolocation.json  nominatim_geocoding.json  rest_countries.json
manifests/categories/government_data/: census_demographics.json  covid_stats.json  data_gov.json  eu_open_data.json  fred_economic.json  imf_financial.json  nasa_apod.json  nasa_asteroids.json  nasa_mars_rover.json  uk_police_data.json  worldbank_indicators.json
manifests/categories/knowledge/: agify_predict_age.json  archive_org.json  arxiv_papers.json  crossref_metadata.json  dbpedia_sparql.json  gutenberg_books.json  nationalize_predict_nationality.json  pubmed_search.json  semantic_scholar.json  universities_search.json  wikidata_sparql.json  wikipedia_search.json  zippopotam_lookup.json
manifests/categories/language/: datamuse_words.json  dictionary.json  gender_from_name.json  language_detect.json  libretranslate.json  lorem_ipsum.json  word_definition.json  word_synonyms.json
manifests/categories/media/: genius_lyrics.json  musicbrainz.json  omdb_movies.json  pexels_media.json  tmdb_movies.json  unsplash_photos.json
manifests/categories/quotes/: adviceslip_random.json  quotable_random.json  zenquotes_random.json
manifests/categories/science/: newton_math.json  periodic_table.json  random_user_data.json  space_people.json  sunrise_sunset.json
manifests/categories/utilities/: base64_decode.json  base64_encode.json  bored_activities.json  color_info.json  httpbin_test.json  ipify_public_ip.json  joke_api.json  placeholder_images.json  postman_echo.json  qr_generator.json  random_data.json  random_user.json  realtime_weather_agent.json  trivia_questions.json  uuid_generator.json
scripts/: api_health_check.py  backup_database.sh  convert_md_to_pdf.sh  create_test_api_key 2.sh  fix_api_manifests.py  generate_manifests.py  publish_sdk.sh  restore_database.sh  run_all_tests.sh  security_check.sh  test_auth_flow.sh  test_load.sh  test_rate_limiting.sh  test_rate_limiting_simple.sh  validate_manifests 2.py
sdk/javascript/: README.md  package.json
sdk/javascript/examples/: basic-usage.js
sdk/javascript/src/: client.ts  index.ts  types.ts
sdk/python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/python/axiomeer/: __init__.py  client.py  exceptions.py  models.py
sdk/python/examples/: advanced_usage.py  basic_usage.py
src/axiomeer.egg-info/: SOURCES.txt  requires.txt
src/marketplace/: cli.py  client_llm.py  settings.py
src/marketplace/auth/: dependencies.py  models.py  rate_limiter.py  security.py
src/marketplace/core/: cache 2.py  cap_extractor.py  evidence_quality.py  executor.py  llm.py  models.py  router.py  semantic_search.py  validate.py
src/marketplace/llm/: ollama_client.py  sales_agent.py
src/marketplace/storage/: db.py  messages.py  models.py  runs.py  users.py
tests/: conftest.py  test_api.py  test_auth.py  test_benchmarks.py  test_cap_extractor.py  test_evidence_quality.py  test_rate_limit.py  test_router.py  test_validate.py
