[project]
name = "axiomeer"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "pydantic[email]>=2.0",
  "sqlalchemy>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.4",
  "numpy>=1.24.0",
  # Authentication dependencies
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.9",
  "bcrypt==4.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
