[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomeer"
version = "0.1.1"
description = "Official Python SDK for Axiomeer AI Agent Marketplace"
readme = "README.md"
authors = [
    {name = "Axiomeer Team", email = "support@axiomeer.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "agents", "marketplace", "llm", "tools", "api"]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.0.285",
]

[project.urls]
Homepage = "https://axiomeer.com"
Documentation = "https://docs.axiomeer.com"
Repository = "https://github.com/axiomeer/axiomeer-sdk-python"
"Bug Tracker" = "https://github.com/axiomeer/axiomeer-sdk-python/issues"

[tool.setuptools.packages.find]
include = ["axiomeer*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
